--- a/Index.html
+++ b/Index.html
@@ -1,35 +1,60 @@
-<html>
- <head>
-  <title> My Profile </title>
-     <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="profile2.css" />
-     
- </head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <style>
+  body{
+  margin: 0;
+  padding: 0;
+  font-family: "montserrat",sans-serif;
+  }
+  .middle{
+    position: absolute;
+    top:50%;
+    left:50%;
+  }
+  .container{
+    position: absolute;
+    display:inline-block;
+    padding:0 40px;
+    cursor: pointer;
+  }
+  .text{
+    font-size: 100px;
+    text-transform: uppercase;
+    position: relative;
+    color: #34495e;
+    font-weight: 600;
+  }
+  .text::before{
+    content: attr(data-text);
+    position:absolute;
+    color: white;
+    width:0;
+    overflow: hidden;
+    transition: 0.5s;
+    width:0;
+  }
+  .container::before{
+    content: "";
+    position: absolute;
+    width:0;
+    height:100%;
+    background: red;
+    right: 0;
+    top: 0;
+    transition: 0.6s;
+  }
+  .container:hover .text::before,
+  .container:hover::before{
+    width: 100%;
+  }
+
+  </style>
+  <meta charset="utf-8">
   <body>
-     <div class="box">
-   <head>
-    <h1>MY PROFILE</H1>
-   </head>
-   <img src="nikhilphoto.jpg">
-   <h1> My name is NIKHIL.V</h1>
-   <p>I am a student who is studying in 1st semister in 
-      BANGALORE INSITUTE OF TECHNOLOGY.<br>
-	  I specially like to do unique things and explore something new.<br>
-	  My hobies is to play,read books,playing games like PUBG etc.. .<br>
-	  I have done my schooling in B.N.M. State school.<br>
-	  I have conpleted my college in Jnana Sweekar pu college.<br>
-	  
-	  <ul id="photo">
-	   <li>
-         <a href="https://www.gmail.com/"><img src="download.png"  alt="gmail logo"></a>
-		 </li>
-		 <li>
-		 <a href="tel:968-687-2937"><img src="whatsapp.png" alt="phone logo"></a>
-		 </li>
-		 <li>
-		 <a href="https://www.facebook.com/"><img src="facebook-logo-grey-png.png"  alt="facebook logo"></a>
-		 </li>
-		</ul> 
-	  <h5>&copy; 2014 nikhil profile</h5>
+    <div class="middle">
+      <span class="container">
+        <div class="text" data-text="nikhil">nikhil</div>
+      </span>
+    </div>
   </body>
 </html>
